--- a/data_exploration/ECPLF_results.ipynb
+++ b/data_exploration/ECPLF_results.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project root added to sys.path: /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline\n"
+      "Project root added to sys.path: /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline\n"
      ]
     }
    ],
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/test_env/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from pipeline.utils.path_manager import PathManager\n",
     "from pipeline.utils.visualization import analyze_tail_posture_changes, generate_tail_posture_subplots\n",
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,34 +176,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/211228_220119\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/220228_220328\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/220505_220530\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/220726_220831\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/221003_221106\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/221219_230125\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/230227_230406\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/230515_230620\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/211227_220119\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/220228_220331\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/220505_220530\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/220725_220831\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/221003_221106\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/221219_230125\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/230227_230405\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/230515_230621\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/211222_220119\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/220228_220330\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/220505_220529\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/220725_220905\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/221003_221106\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/230227_230406\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera4/221226_230126\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera4/230227_230406\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera5/220725_220831\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera5/221004_221104\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera6/230227_230406\n",
-      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera6/230515_230622\n"
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/211228_220119\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/220228_220328\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/220505_220530\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/220726_220831\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/221003_221106\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/221219_230125\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/230227_230406\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera1/230515_230620\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/211227_220119\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/220228_220331\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/220505_220530\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/220725_220831\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/221003_221106\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/221219_230125\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/230227_230405\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera2/230515_230621\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/211222_220119\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/220228_220330\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/220505_220529\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/220725_220905\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/221003_221106\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera3/230227_230406\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera4/221226_230126\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera4/230227_230406\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera5/220725_220831\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera5/221004_221104\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera6/230227_230406\n",
+      "Data transformed and saved to /Users/jan-hendrikwitte/Documents/DigiSchwein/pig_monitoiring_pipeline/pipeline_outputs/data_aggregation/piglet_rearing/Kamera6/230515_230622\n"
      ]
     }
    ],
