--- a/data_exploration/ECPLF_results.ipynb
+++ b/data_exploration/ECPLF_results.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Additional Pens"
+    "## Additional Pens\n"
    ]
   },
   {
