Refactoring. Added code, visualization and evaluation for activity, tail posture and a simple early warning evaluation based on tail posture index score.

--- a/data_exploration/data_exploration.ipynb
+++ b/data_exploration/data_exploration.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project root added to sys.path: /Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline\n"
+      "Project root added to sys.path\n"
      ]
     }
    ],
@@ -23,16 +23,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jan-hendrikwitte/Documents/DigiSchwein/monitoiring_pipeline/test_env/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pipeline.utils.path_manager import PathManager\n",
     "from pipeline.utils.data_analysis_utils import sorting_key, load_monitoring_pipeline_results\n",
@@ -288,9 +279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_env",
+   "display_name": "pig_posture_pipeline",
    "language": "python",
-   "name": "python3"
+   "name": "pig_posture_pipeline"
   },
   "language_info": {
    "codemirror_mode": {
@@ -302,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
