--- a/data_exploration/activity_monitoring_exploration.ipynb
+++ b/data_exploration/activity_monitoring_exploration.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project root added to sys.path: /Users/jan-hendrikwitte/Documents/Arbeit/DigiSchwein/pig_monitoiring_pipeline\n"
+      "Project root added to sys.path\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   "kernelspec": {
    "display_name": "pig_posture_pipeline",
    "language": "python",
-   "name": "python3"
+   "name": "pig_posture_pipeline"
   },
   "language_info": {
    "codemirror_mode": {
@@ -230,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
